force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/PBS_Small_Projects_Historical_Database__c.object-meta.xml
<CustomObject>
    <description>Small Projects Historical Database</description>
    <label>Small Projects Historical Database</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Salesforce Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Small Projects Historical Database</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>