force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Affected_Area__c.field-meta.xml
<CustomField>
    <fullName>Affected_Area__c</fullName>
    <inlineHelpText>Leave blank if not applicable</inlineHelpText>
    <label>Affected Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>