force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <formula>PBS_Project_Name__r.Agency__c</formula>
    <label>Agency</label>
    <type>Text</type>
</CustomField>