force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Building_Address__c.field-meta.xml
<CustomField>
    <fullName>Building_Address__c</fullName>
    <formula>PBS_Building_Number__r.Street_Address__c</formula>
    <label>Building Address</label>
    <type>Text</type>
</CustomField>