force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Building_Number__c.field-meta.xml
<CustomField>
    <fullName>Building_Number__c</fullName>
    <label>Building Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>