force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Central_Facility_Repository_CFR__c.field-meta.xml
<CustomField>
    <fullName>Central_Facility_Repository_CFR__c</fullName>
    <inlineHelpText>Upload record documents, schedule of values, scope of work, and cost estimate into the CFR Project Record.</inlineHelpText>
    <label>CFR URL</label>
    <type>Url</type>
</CustomField>