force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Concrete__c.field-meta.xml
<CustomField>
    <fullName>Concrete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Division 03</inlineHelpText>
    <label>Concrete</label>
    <type>Checkbox</type>
</CustomField>