force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Construction_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Construction_Award_Date__c</fullName>
    <formula>PBS_Project_Name__r.Construction_Award_Date__c</formula>
    <inlineHelpText>ePM-sourced Construction Award Date</inlineHelpText>
    <label>Construction Award Date</label>
    <type>Date</type>
</CustomField>