force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Construction_Duration__c.field-meta.xml
<CustomField>
    <fullName>Construction_Duration__c</fullName>
    <formula>Construction_Substantial_Completion_Date__c -  Construction_NTP_Date__c</formula>
    <label>Construction Duration in Calendar Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>