force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Construction_Funding_FY__c.field-meta.xml
<CustomField>
    <fullName>Construction_Funding_FY__c</fullName>
    <formula>TEXT( PBS_Project_Name__r.numConstructionPlanYear__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Construction Funding FY</label>
    <type>Text</type>
</CustomField>