force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Construction_Substantial_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Construction_Substantial_Completion_Date__c</fullName>
    <formula>PBS_Project_Name__r.Construction_Substantial_Completion_Date__c</formula>
    <label>Construction Substantial Completion Date</label>
    <type>Date</type>
</CustomField>