force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Contracting_Officer__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Officer__c</fullName>
    <formula>PBS_Project_Name__r.Contracting_Officer__c</formula>
    <label>Contracting Officer</label>
    <type>Text</type>
</CustomField>