force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <formula>TEXT(PBS_Project_Name__r.txtDeliveryMethod_FullCode__c)</formula>
    <label>Delivery Method</label>
    <type>Text</type>
</CustomField>