force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Design_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Design_Completion_Date__c</fullName>
    <formula>PBS_Project_Name__r.Design_Completion_Date__c</formula>
    <label>Design Completion Date</label>
    <type>Date</type>
</CustomField>