force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Design_Funding_FY__c.field-meta.xml
<CustomField>
    <fullName>Design_Funding_FY__c</fullName>
    <formula>TEXT(PBS_Project_Name__r.numDesignPlanYear__c)</formula>
    <label>Design Funding FY</label>
    <type>Text</type>
</CustomField>