force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Earthwork__c.field-meta.xml
<CustomField>
    <fullName>Earthwork__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Division 31</inlineHelpText>
    <label>Earthwork</label>
    <type>Checkbox</type>
</CustomField>