force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Electronic_Safety_and_Security__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Safety_and_Security__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Division 28</inlineHelpText>
    <label>Electronic Safety and Security</label>
    <type>Checkbox</type>
</CustomField>