force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/ePM__c.field-meta.xml
<CustomField>
    <fullName>ePM__c</fullName>
    <formula>TEXT(PBS_Project_Name__r.numProjectNumber__c)</formula>
    <label>ePM Project Number</label>
    <type>Text</type>
</CustomField>