force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Division 09</inlineHelpText>
    <label>Equipment</label>
    <type>Checkbox</type>
</CustomField>