force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Exterior_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Exterior_Improvements__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Division 32</inlineHelpText>
    <label>Exterior Improvements</label>
    <type>Checkbox</type>
</CustomField>