force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Fire_Suppression__c.field-meta.xml
<CustomField>
    <fullName>Fire_Suppression__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Division 21</inlineHelpText>
    <label>Fire Suppression</label>
    <type>Checkbox</type>
</CustomField>