force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Furnishings__c.field-meta.xml
<CustomField>
    <fullName>Furnishings__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Division 12</inlineHelpText>
    <label>Furnishings</label>
    <type>Checkbox</type>
</CustomField>