force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Heating_Ventilating_and_Air_Conditionin__c.field-meta.xml
<CustomField>
    <fullName>Heating_Ventilating_and_Air_Conditionin__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Division 23</inlineHelpText>
    <label>Heating, Ventilation &amp; Air Conditioning</label>
    <type>Checkbox</type>
</CustomField>