force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/IsOwner__c.field-meta.xml
<CustomField>
    <fullName>IsOwner__c</fullName>
    <formula>IF(Owner:User.Id  == $User.Id, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOwner</label>
    <type>Checkbox</type>
</CustomField>