force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Masonry__c.field-meta.xml
<CustomField>
    <fullName>Masonry__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Division 04</inlineHelpText>
    <label>Masonry</label>
    <type>Checkbox</type>
</CustomField>