force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Metals__c.field-meta.xml
<CustomField>
    <fullName>Metals__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Division 05</inlineHelpText>
    <label>Metals</label>
    <type>Checkbox</type>
</CustomField>