force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Obstacles_Lessons_Learned__c.field-meta.xml
<CustomField>
    <fullName>Obstacles_Lessons_Learned__c</fullName>
    <label>Obstacles/Lessons Learned</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>