force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <type>TextArea</type>
</CustomField>