force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/PBS_Building_Number__c.field-meta.xml
<CustomField>
    <fullName>PBS_Building_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Search Building # or Building Name</inlineHelpText>
    <label>PBS Building Number</label>
    <referenceTo>PBS_Building__c</referenceTo>
    <relationshipLabel>Small Projects Historical Database</relationshipLabel>
    <relationshipName>Small_Projects_Historical_Database</relationshipName>
    <type>Lookup</type>
</CustomField>