force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/PBS_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>PBS_Project_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ePM Project Name</label>
    <referenceTo>PBS_Project__c</referenceTo>
    <relationshipLabel>Small Projects Historical Database</relationshipLabel>
    <relationshipName>Small_Projects_Historical_Database</relationshipName>
    <type>Lookup</type>
</CustomField>