force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Property_Manager_User__c.field-meta.xml
<CustomField>
    <fullName>Property_Manager_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Small_Projects_Historical_Database</relationshipName>
    <type>Lookup</type>
</CustomField>