force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Study_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Study_Award_Date__c</fullName>
    <formula>PBS_Project_Name__r.Study_Award_Date__c</formula>
    <label>Study Award Date</label>
    <type>Date</type>
</CustomField>