force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Study_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Study_Completion_Date__c</fullName>
    <formula>PBS_Project_Name__r.Study_Completion_Date__c</formula>
    <label>Study Completion Date</label>
    <type>Date</type>
</CustomField>