force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Study_Cost__c.field-meta.xml
<CustomField>
    <fullName>Study_Cost__c</fullName>
    <label>Study Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>