force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Small Projects Historical Database</relationshipLabel>
    <relationshipName>Small_Projects_Historical_Database</relationshipName>
    <type>Lookup</type>
</CustomField>