force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Supervisor_User__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Small_Projects_Historical_Database1</relationshipName>
    <type>Lookup</type>
</CustomField>