force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Thermal_and_Mositure_Protection__c.field-meta.xml
<CustomField>
    <fullName>Thermal_and_Mositure_Protection__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Division 07</inlineHelpText>
    <label>Thermal and Mositure Protection</label>
    <type>Checkbox</type>
</CustomField>