force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Utilities__c.field-meta.xml
<CustomField>
    <fullName>Utilities__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Division 33</inlineHelpText>
    <label>Utilities</label>
    <type>Checkbox</type>
</CustomField>