force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/fields/Wood_Plastics_and_Composites__c.field-meta.xml
<CustomField>
    <fullName>Wood_Plastics_and_Composites__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Division 06</inlineHelpText>
    <label>Wood, Plastics, and Composites</label>
    <type>Checkbox</type>
</CustomField>