force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/listViews/Additional_Keywords.listView-meta.xml
<ListView>
    <fullName>Additional_Keywords</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9 OR 10</booleanFilter>
    <columns>NAME</columns>
    <columns>Earthwork__c</columns>
    <columns>Electrical__c</columns>
    <columns>Electronic_Safety_and_Security__c</columns>
    <columns>Wood_Plastics_and_Composites__c</columns>
    <columns>Masonry__c</columns>
    <columns>Metals__c</columns>
    <columns>Finishes__c</columns>
    <columns>Fire_Suppression__c</columns>
    <columns>Furnishings__c</columns>
    <columns>Equipment__c</columns>
    <columns>Exterior_Improvements__c</columns>
    <columns>Heating_Ventilating_and_Air_Conditionin__c</columns>
    <columns>Concrete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Equipment__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Exterior_Improvements__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Finishes__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Fire_Suppression__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Heating_Ventilating_and_Air_Conditionin__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Concrete__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Masonry__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Metals__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Wood_Plastics_and_Composites__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Thermal_and_Mositure_Protection__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Additional Keywords</label>
</ListView>