force-app/main/default/objects/PBS_Small_Projects_Historical_Database__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>PBS_Building_Number__c</columns>
    <columns>Total_Project_Cost__c</columns>
    <columns>PBS_Project_Name__c</columns>
    <columns>Contracting_Officer__c</columns>
    <columns>City__c</columns>
    <columns>PBSBuilding_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>